src/index.css
* {
  margin: 0;
  padding: 0;
}

*:focus {
  outline-color: #e80505;
}

:root {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

ul ol {
  padding: 0;
}

li {
  list-style-type: none;
}

a {
  text-decoration: none;
  color: #e80505;
  font-weight: 100;
}

input {
  border: 1px solid #b6b6b6;
  margin: 0 auto;
  color: #0a0a0a;
  border-radius: 10px;
  -webkit-border-radius: 10px;
  -webkit-appearance: none;
}

input:focus {
  outline-offset: 0;
}

header {
  padding: 10px;
  border-bottom: 2px solid #e6e6e6;
  height: 52px;
  box-sizing: border-box;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1000;
}

nav ul {
  display: flex;
  justify-content: flex-end;
}

nav li + li {
  margin-left: 1em;
}

nav li {
  display: flex;
  align-items: center;
}

nav button {
  color: #000000;
  border-color: #0a0a0a;
  background: #ffffff;
  border: solid;
  border-width: 1px;
  font-size: 14px;
  font-weight: 200;
  border-radius: 3px;
  height: 30px;
  width: 70px;
}

nav button:hover:enabled {
  color: #ffffff;
  background: #0a0a0a;
}

nav button:active {
  transform: translateY(1px);
}

.button {
  color: #e6e6e6;
  background: #0a0a0a;
  border: none;
  font-size: 16px;
  border-radius: 3px;
  height: 38px;
  width: 150px;
  padding: 7px 0;
  margin: 10px auto;
}

.button:active {
  transform: translateY(1px);
}

.active {
  font-weight: bold;
  border-bottom: 3px solid #e80505;
}

.complete-logo {
  margin-right: auto;
}

#nav-logo {
  border: none;
  color: #0a0a0a;
  display: flex;
  align-items: center;
}

.logo {
  position: relative;
  top: 3px;
  height: 30px;
  width: 30px;
}

.logotype {
  font-weight: 700;
  display: inline;
}

.button:hover:enabled {
  background: linear-gradient(#1a1a1a, #0a0a0a);
  color: #fff;
  text-decoration: none;
}

.button:active {
  transform: translateY(1px);
}

.conversations {
  position: relative;
  display: flex;
  flex-direction: column;
  height: calc(100vh - 52px);
}

.conversation-cell {
  display: grid;
  grid-template-columns: 70px repeat(3, 1fr) 15px;
  grid-template-rows: repeat(6, 10px);
  padding: 10px;
}

.conversation-cell:hover {
  background-color: #f0efef;
}

.conversation-cell.selected {
  background-color: #fbe5e5;
  transition: background-color 0.3s ease-out;
}

.conversation-avatar {
  grid-row: 1 / end;
  grid-column: 1 / 2;
  border-radius: 50%;
  height: 60px;
}

.conversation-body {
  grid-column: 2 / 8;
  grid-row: 3 / end;
  color: #797979;
  font-weight: 200;
  font-size: 16px;
}

.conversation-name {
  grid-column: 2 / 7;
  grid-row: 1;
  font-weight: 500;
  font-size: 16px;
  color: #000000;
}

.conversation-arrow {
  height: 15px;
  grid-row: 3;
  grid-column: 9;
  fill: #cecdcd;
}

.conversation-timestamp {
  font-size: 14px;
  grid-row: 1;
  grid-column: 8 / end;
  color: #b6b6b6;
  justify-content: end;
}

html, body {
  width: 100%;
  margin: 0;
  overflow: hidden;
  position: fixed;
}

.wrapper {
  display: flex;
  flex-direction: column;
  min-width: 320px;
}

.header {
  background-image: linear-gradient(to bottom, #ffffff, #fefefe, #fcfdfc, #fbfbfb, #fafafa);
}

.footer {
  padding-top: 0;
  background: #fafafa;
}

.chat-form-wrapper {
  align-self: center;
  position: relative;
  bottom: 0;
  background: white;
  width: 100%;
  height: 45px;
}

.chat-form {
  box-sizing: border-box;
  display: inline-flex;
  flex-direction: row;
  width: 100%;
  padding: 5px;
}

.chat-input {
  font-size: 16px;
  flex-grow: 1;
  padding: 5px;
}

.chat-submit-button {
  position: relative;
  color: #e80505;
  background: #e80505;
  border: 3px solid #bbbbbb;
  width: 35px;
  height: 35px;
  font-size: 15px;
  font-weight: 900;
  border-radius: 50%;
  justify-content: center;
  margin-left: 5px;
  margin-right: 10px;
  vertical-align: middle;
}

.chat-submit-button:disabled {
  opacity: 0.4;
}

.chat-submit-button:active {
  transform: translateY(1px);
}

.chat-submit-button span {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-0.5em, -0.9em);
}

.content {
  position: relative;
  margin-top: 52px;
  box-sizing: border-box;
  flex: 1;
  -webkit-overflow-scrolling: touch;
  min-height: 100vh;
  min-height: -webkit-fill-available;
}

.home-container {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  padding: 10px;
  margin: 0 auto;
  background-image: url(https://s3.us-east-2.amazonaws.com/bigbisonchat/bison-background.jpg);
  background-size: cover;
  max-width: 500px;
}

.new-chat-form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.new-chat-input {
  font-size: 16px;
  width: 130px;
  max-height: 500px;
  margin: 5px;
  padding: 5px;
  align-self: center;
}

.new-chat {
  margin: 10%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.bubble-wrap {
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 7px;
  padding-bottom: 7px;
  display: flex;
  flex: 1 0 auto;
  flex-direction: column;
}

.bubble-username {
  font-weight: 700;
  padding-bottom: 5px;
}

.bubble-body {
  background: linear-gradient(#FF4136, #e80505);
  max-width: 300px;
  padding: 12px;
  overflow-wrap: break-word;
}

.bubble-timestamp {
  color: grey;
  font-size: 13px;
  white-space: nowrap;
}

.bubble-list {
  display: flex;
  flex-direction: column;
}

.bubble-left {
  align-self: flex-start;
}

.bubble-right {
  align-self: flex-end;  
}

.bubble-left > .bubble-body {
  border-radius: 15px 15px 15px 0;
  border: 1px solid rgb(213, 213, 213);
  background-image: linear-gradient(to bottom, #ffffff, #fefefe, #fcfdfc, #fbfbfb, #fafafa);
  color: black;
  align-self: flex-start;
}

.bubble-left > .bubble-username {
  text-align: left;
  padding-left: 5px;
}

.bubble-right > .bubble-username {
  padding-right: 5px;
  text-align: right;
}

.bubble-right > .bubble-body {
  border-radius: 15px 15px 0 15px;
  color: white;
  float: right;
  align-self: flex-end;
}

.bubble-right > .bubble-timestamp {
  text-align: right;
}

.header-shadow{
  box-shadow: 0 10px 10px -6px rgb(232, 232, 232);
}

.recipient-wrapper {
  margin-top: 10px;
  padding: 5px;
}

.recipient-to {
  padding: 5px;
  color: #797979;
  vertical-align: middle;
  flex: 1 1;
}

.detail-view-wrapper {
  display: flex;
  position: relative;
}

.detail-view-wrapper .conversations {
  flex: 1 0 25%;
  max-width: 350px;
  min-width: 300px;
  overflow-y: auto;
}

.chat-window-wrapper {
  position: relative;
  flex: 1 1 50%;
  border-left: 2px solid #e6e6e6;
}

.chat-wrapper {
  position: relative;
  overflow-y: auto;
  height: calc(100vh - 100px);
}

.detail-view-wrapper .chat-wrapper {
  position: relative;
  flex: 1 1 50%;
  min-width: 350px;
  
  display: flex;
  flex-flow: column nowrap;
}

